Add nice header

--- a/Main.html
+++ b/Main.html
@@ -1,77 +1,105 @@
 <head>
     <title>Welcome to 1st website</title>
     <meta name="Simonas Čeponis portfolio">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
+    <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header class="Header">
-        <div class="row">
-            <div class="column column-offset-10">
-                <div class="row"><h1>Simonas Čeponis</h1></div>
-            </div>
-            <div class="column">
-              <a href="Main.html">About me</a>
-            </div>
-            <div class="column">
-              <a href="projects.html">My projects</a>
-            </div>
-            <div class="column  column-20">
-                <a href="https://github.com/latedude2"> <img alt="GitHub" src="images/GitHub-Mark-64px.png" width=32" height="32"></a>
-                <a href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/LI-In-Bug.png" width=35" height="32"></a>
-            </div>
+    <nav class="navigation">
+      <section class="container">
+            <a class="navigation-title" href="Main.html" >
+              <h1 class="title">Simonas Čeponis</h1>
+            </a>
+            <ul class="navigation-list float-right">
+              <li class="navigation-item">
+                <a class="navigation-link" href="Main.html">About me</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="projects.html">My projects</a>
+              </li>
+              <li class="navigation-item">
+                <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/GitHub-Mark-64px.png" width=32" height="32"></a>
+              </li>
+              <li class="navigation-item">
+                <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/LI-In-Bug.png" width=35" height="32"></a>
+              </li>
+            </ul>
         </div>
-        <div class="row">
+      </section>
+    </nav>
+    <section class="container"> 
+      <div class="container">
+          <div class="row">
+            <div class="column"> 
+            <h2>Professional work experience</h2>
 
-        </div>
-    </header>
-    <div class="container">
-
-        <div class="row">
-            <div class="column">
-                <table>
-                    <thead>
-                      <tr>
-                        <th>Language</th>
-                        <th>Listening</th>
-                        <th>Speaking</th>
-                        <th>Reading</th>
-                        <th>Writing</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th>Lithuanian</th>
-                        <td>Native</td>
-                        <td>Native</td>
-                        <td>Native</td>
-                        <td>Native</td>
-                      </tr>
-                      <tr>
-                        <th>English</th>
-                        <td>C2</td>
-                        <td>C2</td>
-                        <td>C2</td>
-                        <td>C2</td>
-                      </tr>
-                      <tr>
-                        <th>German</th>
-                        <td>A2</td>
-                        <td>A2</td>
-                        <td>A2</td>
-                        <td>A2</td>
-                      </tr>
-                      <tr>
-                        <th>Danish</th>
-                        <td>A1</td>
-                        <td>A1</td>
-                        <td>B1</td>
-                        <td>A1</td>
-                      </tr>
-                    </tbody>
-                  </table>
             </div>
-        </div>
-    </div>
+          </div>
 
+          <div class="row">
+            <div class="column"> 
+            <h2>Education</h2>
+
+            </div>
+          </div>
+
+          <div class="row">
+              
+              <div class="column"> 
+                <h2>Languages</h2> 
+                  <table>
+                      <thead>
+                        <tr>
+                          <th></th>
+                          <th>Listening</th>
+                          <th>Speaking</th>
+                          <th>Reading</th>
+                          <th>Writing</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th>Lithuanian</th>
+                          <td>Native</td>
+                          <td>Native</td>
+                          <td>Native</td>
+                          <td>Native</td>
+                        </tr>
+                        <tr>
+                          <th>English</th>
+                          <td>C2</td>
+                          <td>C2</td>
+                          <td>C2</td>
+                          <td>C2</td>
+                        </tr>
+                        <tr>
+                          <th>German</th>
+                          <td>A2</td>
+                          <td>A2</td>
+                          <td>A2</td>
+                          <td>A2</td>
+                        </tr>
+                        <tr>
+                          <th>Danish</th>
+                          <td>A1</td>
+                          <td>A1</td>
+                          <td>B1</td>
+                          <td>A1</td>
+                        </tr>
+                      </tbody>
+                    </table>
+              </div>
+          </div>
+      </div>
+    </section>
     
 </body>
