--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,41 @@
 <head>
     <title>Welcome to 1st website</title>
     <meta name="Simonas Čeponis portfolio">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
+    <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header class="Header">
-        <div class="row">
-            <div class="column column-offset-10">
-                <div class="row"><h1>Simonas Čeponis</h1></div>
-            </div>
-            <div class="column">
-                <a href="Main.html">About me</a>
-            </div>
-            <div class="column">
-              <a href="projects.html">My projects</a>
-            </div>
-            
-            <div class="column  column-20">
-                <a href="https://github.com/latedude2"> <img alt="GitHub" src="images/GitHub-Mark-64px.png" width=32" height="32"></a>
-                <a href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/LI-In-Bug.png" width=35" height="32"></a>
-            </div>
-        </div>
-        <div class="row">
-
-        </div>
-    </header>
+    <nav class="navigation">
+        <section class="container">
+              <a class="navigation-title" href="Main.html" >
+                <h1 class="title">Simonas Čeponis</h1>
+              </a>
+              <ul class="navigation-list float-right">
+                <li class="navigation-item">
+                  <a class="navigation-link" href="Main.html">About me</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="projects.html">My projects</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/GitHub-Mark-64px.png" width=32" height="32"></a>
+                </li>
+                <li class="navigation-item">
+                  <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/LI-In-Bug.png" width=35" height="32"></a>
+                </li>
+              </ul>
+          </div>
+        </section>
+      </nav>
     <div class="container">
 
         <div class="row">
