Change index file name

--- a/projects.html
+++ b/projects.html
@@ -16,12 +16,12 @@
 <body>
     <nav class="navigation">
         <section class="container">
-              <a class="navigation-title" href="Main.html" >
+              <a class="navigation-title" href="index.html" >
                 <h1 class="title">Simonas Čeponis</h1>
               </a>
               <ul class="navigation-list float-right">
                 <li class="navigation-item">
-                  <a class="navigation-link" href="Main.html">About me</a>
+                  <a class="navigation-link" href="index.html">About me</a>
                 </li>
                 <li class="navigation-item">
                   <a class="navigation-link" href="projects.html">My projects</a>
