Change title and fix body

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Welcome to 1st website</title>
+    <title>Simonas Čeponis</title>
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -37,11 +37,11 @@
       </section>
     </nav>
     <section class="container"> 
-      <div class="container">
+      <div class="main">
           <div class="row">
             <div class="column"> 
             <h2>Professional work experience</h2>
-
+              
             </div>
           </div>
 
@@ -99,7 +99,7 @@
                     </table>
               </div>
           </div>
-      </div>
+        </div>
     </section>
     
 </body>
