--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Welcome to 1st website</title>
+    <title>Simonas Čeponis Projects</title>
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
