Add work experience and education

--- a/index.html
+++ b/index.html
@@ -40,14 +40,35 @@
       <div class="main">
           <div class="row">
             <div class="column"> 
-            <h2>Professional work experience</h2>
-              
+              <h2>Work Experience</h2>
+            </div>
+            <div class="column"> 
+              <h3><b>Software tester</b></h3>
+              <p>2019 - Present <b>Lærdal</b></p>
+              <p>Test automation and manual testing of software solutions. Accessibility testing to comply with WCAG 2.1. Working together with other testers to plan the testing process. </p>
+
+              <h3><b>Teaching assistant</b></h3>
+              <p>2018 - 2019 <b>EDUGAIM</b></p>
+              <p>Teaching high school students how to use the Unity game engine to create games. </p>
+ 
+              <h3><b>Junior Test Engineer</b></h3>
+              <p>2018 - 2018 <b>Unity Technologies</b></p>
+              <p>Responding to client bug reports and creating reproducible bug reports. I left this position because I moved to Copenhagen to study at Aalborg university. </p>
             </div>
           </div>
 
           <div class="row">
             <div class="column"> 
-            <h2>Education</h2>
+              <h2>Education</h2>
+            </div>
+            <div class="column"> 
+              <h3><b>Medialogy Bachelor’s degree</b></h3>
+              <p>2018 - Present <b>Aalborg university</b></p>
+              <p>Learning a combination of design and programming topics. We learned how to develop and interactive project from brainstorming to final evaluation of the prototype using user testing. </p>
+
+              <h3><b>Computer Science Bachelor’s degree</b></h3>
+              <p>2018 - 2019 <b>Kaunas university of technology</b></p>
+              <p>First year of computer science studies. I enjoyed the topics taught and gained a lot of knowledge, but the teaching quality left me wanting more. Therefore I moved to Denmark to study at Aalborg university.  </p>
 
             </div>
           </div>
