Add images and start project page

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <a class="navigation-link" href="projects.html">My projects</a>
               </li>
               <li class="navigation-item">
-                <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/GitHub-Mark-64px.png" width=32" height="32"></a>
+                <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/cv/GitHub-Mark-64px.png" width=32" height="32"></a>
               </li>
               <li class="navigation-item">
-                <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/LI-In-Bug.png" width=35" height="32"></a>
+                <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/cv/LI-In-Bug.png" width=35" height="32"></a>
               </li>
             </ul>
         </div>
@@ -43,16 +43,29 @@
               <h2>Work Experience</h2>
             </div>
             <div class="column"> 
-              <h3><b>Software tester</b></h3>
-              <p>2019 - Present <b>Lærdal</b></p>
-              <p>Test automation and manual testing of software solutions. Accessibility testing to comply with WCAG 2.1. Working together with other testers to plan the testing process. </p>
-
-              <h3><b>Teaching assistant</b></h3>
-              <p>2018 - 2019 <b>EDUGAIM</b></p>
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/laerdal-logo.jpg">
+                <div class ="cv-text">
+                  <h3><b>Software Tester</b></h3>
+                  <p>2019 - Present <b>Lærdal</b></p>
+                </div>
+              </div>
+                <p>Test automation and manual testing of software solutions. Accessibility testing to comply with WCAG 2.1. Working together with other testers to plan the testing process. </p>
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/EDUGAIM.png">
+                <div class ="cv-text">
+                  <h3><b>Teaching Assistant</b></h3>
+                  <p>2018 - 2019 <b>EDUGAIM</b></p>
+                </div>
+              </div>
               <p>Teaching high school students how to use the Unity game engine to create games. </p>
- 
-              <h3><b>Junior Test Engineer</b></h3>
-              <p>2018 - 2018 <b>Unity Technologies</b></p>
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/unity-tab-square-white.png">
+                <div class ="cv-text">
+                  <h3><b>Junior Test Engineer</b></h3>
+                  <p>2018 - 2018 <b>Unity Technologies</b></p>
+                </div>
+              </div>
               <p>Responding to client bug reports and creating reproducible bug reports. I left this position because I moved to Copenhagen to study at Aalborg university. </p>
             </div>
           </div>
@@ -62,12 +75,22 @@
               <h2>Education</h2>
             </div>
             <div class="column"> 
-              <h3><b>Medialogy Bachelor’s degree</b></h3>
-              <p>2018 - Present <b>Aalborg university</b></p>
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/aau.png">
+                <div class ="cv-text">
+                  <h3><b>Medialogy Bachelor’s Degree</b></h3>
+                  <p>2018 - Present <b>Aalborg university</b></p>
+                </div>
+              </div>
               <p>Learning a combination of design and programming topics. We learned how to develop and interactive project from brainstorming to final evaluation of the prototype using user testing. </p>
-
-              <h3><b>Computer Science Bachelor’s degree</b></h3>
-              <p>2018 - 2019 <b>Kaunas university of technology</b></p>
+              
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/ktu-ikona.png">
+                <div class ="cv-text">
+                  <h3><b>Computer Science Bachelor’s Degree</b></h3>
+                  <p>2018 - 2019 <b>Kaunas university of technology</b></p>
+                </div>
+              </div>
               <p>First year of computer science studies. I enjoyed the topics taught and gained a lot of knowledge, but the teaching quality left me wanting more. Therefore I moved to Denmark to study at Aalborg university.  </p>
 
             </div>
