Add gallery and first project

--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-
     <!-- CSS Reset -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-
     <!-- My CSS -->
     <link rel="stylesheet" href="main.css">
 </head>
@@ -37,7 +34,15 @@
       </section>
     </nav>
     <section class="container"> 
-      <div class="main">
+      <div class="main"> 
+          <div class="row">
+            <div class="column"> 
+              <p style="padding-top:100px;" >Welcome to my website! I am Simonas Čeponis, a student software tester and aspiring software developer and I invite you to take a look around and learn more about me, my experiences and projects :)  </p>
+            </div>
+            <div class="column"> 
+              <img height="300" src="images/cv/Portretas.jpg">
+            </div>
+          </div>
           <div class="row">
             <div class="column"> 
               <h2>Work Experience</h2>
@@ -87,12 +92,11 @@
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/ktu-ikona.png">
                 <div class ="cv-text">
-                  <h3><b>Computer Science Bachelor’s Degree</b></h3>
+                  <h3><b>Computer Science Bachelor’s Studies</b></h3>
                   <p>2018 - 2019 <b>Kaunas university of technology</b></p>
                 </div>
               </div>
-              <p>First year of computer science studies. I enjoyed the topics taught and gained a lot of knowledge, but the teaching quality left me wanting more. Therefore I moved to Denmark to study at Aalborg university.  </p>
-
+              <p>First year of Computer Science studies. I enjoyed the topics taught and gained a lot of knowledge, but the teaching quality left me wanting more. Therefore I moved to Denmark to study at Aalborg university.  </p>
             </div>
           </div>
 
