Add wildfire rush project

--- a/index.html
+++ b/index.html
@@ -11,28 +11,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav class="navigation">
-      <section class="container">
-            <a class="navigation-title" href="index.html">
-              <h1 class="title">Simonas Čeponis</h1>
-            </a>
-            <ul class="navigation-list float-right">
-              <li class="navigation-item">
-                <a class="navigation-link" href="index.html">About me</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="projects.html">My projects</a>
-              </li>
-              <li class="navigation-item">
-                <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/cv/GitHub-Mark-64px.png" width=32" height="32"></a>
-              </li>
-              <li class="navigation-item">
-                <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/cv/LI-In-Bug.png" width=35" height="32"></a>
-              </li>
-            </ul>
-        </div>
-      </section>
-    </nav>
+    <div w3-include-html="navigation.html"></div> 
     <section class="container"> 
       <div class="main"> 
           <div class="row">
@@ -101,7 +80,6 @@
           </div>
 
           <div class="row">
-              
               <div class="column"> 
                 <h2>Languages</h2> 
                   <table>
@@ -149,5 +127,6 @@
           </div>
         </div>
     </section>
-    
+    <script src="includeHTML.js"></script>
+    <script>includeHTML();</script>
 </body>
