--- a/projects.html
+++ b/projects.html
@@ -8,81 +8,28 @@
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
 
     <link rel="stylesheet" href="mibreitGallery.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="mibreitGallery.min.js"></script>
-    
+    <script src="/mibreitGallery.min.js"></script>
 </head>
 <body>
-    <nav class="navigation">
-        <section class="container">
-              <a class="navigation-title" href="index.html" >
-                <h1 class="title">Simonas Čeponis</h1>
-              </a>
-              <ul class="navigation-list float-right">
-                <li class="navigation-item">
-                  <a class="navigation-link" href="index.html">About me</a>
-                </li>
-                <li class="navigation-item">
-                  <a class="navigation-link" href="projects.html">My projects</a>
-                </li>
-                <li class="navigation-item">
-                  <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="images/cv/GitHub-Mark-64px.png" width=32" height="32"></a>
-                </li>
-                <li class="navigation-item">
-                  <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="images/cv/LI-In-Bug.png" width=35" height="32"></a>
-                </li>
-              </ul>
+  <div w3-include-html="navigation.html"></div> 
+  <div class="container">
+    <div class="main">
+      <div class="row">
+          <div class="column">
+            <h2>Projects I worked on</h2>
+            <ul>
+                <li><a href="/projects/wildfireRush.html">🔥 Wildfire Rush - Action/Puzzle Game (2021)</a></li>
+                <li><a href="/projects/gameNavigationalAids.html">🐝 Game Navigational Aids Research - Adventure Game (2020)</a></li>
+            </ul> 
           </div>
-        </section>
-      </nav>
-    <div class="container">
-      <div class="main">
-        <div class="row">
-            <div class="column">
-              <h2>University Projects</h2>
-                <h3>Game Navigational Aid research</h3>
-
-                <p>I worked on a research project looking into navigational aids’ effect on cognitive map creation of video game environment together with 5 other students. 
-                  For this project, I acted as the team lead, planning the work schedule, 
-                  splitting tasks and also taking big parts of the technical implementation. </p>
-                <p><b>Technologies used: </b>C#, Processing, Python, Unity, Jupyter Notebooks, Pandas and various others.</p>
-                <p><b>Links: </b> </p>
-
-                <div class="image-gallery">
-                  <div class="mibreit-imageElement" style="opacity:0">
-                    <img src="images/mibreitGallery/image-placeholder-transparent.png" 
-                          data-src="images/projects/AngryBees.jpg" 
-                          data-title="Image 1" 
-                          alt="Image 2" />
-                    <p>I was responsible for a big part of the programming for this project. I also setup the navigation system and optimized the performance of the game. 
-                      A lot of effort was put in into optimization because the size and design of the level were hard to optimize for. </p>
-                  </div>
-                  <div class="mibreit-imageElement" style="opacity:0">
-                    <img src="images/mibreitGallery/image-placeholder-transparent.png" 
-                          data-src="images/projects/HeatmapForward.png" 
-                          data-title="Image 2" 
-                          alt="Image 2" />
-                    <p>I wrote a Processing application to visualize the paths the players were taking through the level. 
-                      This tool was necessary to ensure that the data collected from the test participants was valid. 
-                      And hey, it looks pretty neat. </p>
-                  </div>
-                  <div class="mibreit-imageElement" style="opacity:0">
-                    <img src="images/mibreitGallery/image-placeholder-transparent.png" 
-                          data-src="images/projects/ScatterTimeBack.jpg" 
-                          data-title="Image 3" 
-                          alt="Image 3" />
-                    <p>I was responsible for the quantitative data analysis for this project. 
-                      It included choosing the correct analysis tool and applying it using Python. 
-                      The results showed that there was no significant difference between using an NPC or an Arrow as the navigational aid for the creation of a cognitive map of the game environment. </p>
-                  </div>
-                  <script src="initializeGallery.js"></script>
-                </div>
-            </div>
-        </div>
       </div>
     </div>
-
+  </div>
+  <script src="/showProjects.js"></script>
+  <script src="/includeHTML.js"></script>
+  <script>includeHTML();</script>
 </body>
