--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="/projects/wildfireRush.html">🔥 Wildfire Rush - Action/Puzzle Game (2021)</a></li>
                 <li><a href="/projects/gameNavigationalAids.html">🐝 Game Navigational Aids Research - Adventure Game (2020)</a></li>
+                <li><a href="/projects/partyLeds.html">🥳 Party LEDs - Arduino project (2020)</a></li>
             </ul> 
           </div>
       </div>
