--- a/projects/gameNavigationalAids.html
+++ b/projects/gameNavigationalAids.html
@@ -27,9 +27,9 @@
               <p><b>Technologies used: </b>C#, Processing, Python, Unity, Jupyter Notebooks, Pandas and various others.</p>
               <b>Links: </b> 
             <ul>
-                <li><a href= "https://youtu.be/sUE7P1hAuo0">Video Presentation</a></li>
-                <li><a href= "https://github.com/latedude2/P5Game">Github Repository</a></li>
-                <li<a href= "https://github.com/latedude2/P5-data-analysis">Github Data Analysis Repository</a></li>
+                <li><a href= "https://youtu.be/sUE7P1hAuo0" target="_blank">Video Presentation</a></li>
+                <li><a href= "https://github.com/latedude2/P5Game" target="_blank">Github Repository</a></li>
+                <li<a href= "https://github.com/latedude2/P5-data-analysis" target="_blank">Github Data Analysis Repository</a></li>
             </ul> 
 
               <div class="image-gallery">
