--- a/projects/partyLeds.html
+++ b/projects/partyLeds.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Simonas Čeponis Wildfire Rush Game</title>
+    <title>Simonas Čeponis Party LEDs</title>
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -20,39 +20,39 @@
     <div class="main">
       <div class="row">
           <div class="column">
-            <h2>Wildfire Rush</h2>
-            <p>A game developed by me and 4 other students during a game development course at Aalborg university.
-            For this project, I acted as the team lead, programmer and game designer. 
-            The levels were loaded during runtime from a website I setup which hosted the level files. 
-            This was done to easier edit the levels when using the WebGL build.</p>
-            <p><b>Technologies used: </b>C#, Unity, Javascript.</p>
+            <h2>Party LEDs</h2>
+            <p>A personal project for the Physical Interface Design course at Aalborg university. 
+                I created a party lighting system using an LED strip, Arduino and a Processing script. 
+                The Processing script analyses the sound made by the computer and sends an appropriate signal to the Arduino. 
+                The Arduino then takes user input into account and lights up the LED strip accordingly. 
+            </p>
+            <p><b>Technologies used: </b>Arduino, Processing.</p>
             <b>Links: </b> 
             <ul>
-                <li><a href= "https://www.youtube.com/watch?v=xE3GL39ctm0" target="_blank">Video Trailer</a></li>
-                <li><a href= "https://github.com/Jokubas126/BushfireGame" target="_blank">Github Repository</a></li>
-                <li><a href= "https://latedude2.itch.io/wildfire-rush" target="_blank">Play the game on Itch.io!</a></li>
+                <li><a href= "https://youtu.be/aEGAtyXTmqY" target="_blank">Video showcase</a></li>
+                <li><a href= "https://github.com/latedude2/PartyLeds" target="_blank">Github Repository</a></li>
             </ul> 
             <div class="image-gallery">
             <div class="mibreit-imageElement" style="opacity:0">
                 <img src="/images/mibreitGallery/image-placeholder-transparent.png" 
-                    data-src="/images/projects/wildfireRush/menu.png" 
+                    data-src="/images/projects/partyLeds/rainbow.jpg" 
                     data-title="Image 1" 
                     alt="Image 1" />
-                <p>I worked with the Unity UI system to setup the menu layout so it adapted to various screen sizes. </p>
+                <p>The rainbow effect in action. </p>
             </div>
             <div class="mibreit-imageElement" style="opacity:0">
                 <img src="/images/mibreitGallery/image-placeholder-transparent.png" 
-                    data-src="/images/projects/wildfireRush/particleSystem.png" 
+                    data-src="/images/projects/partyLeds/parts.jpg" 
                     data-title="Image 2" 
                     alt="Image 2" />
-                <p>I used the Unity Particle System to create a fire extinguisher effect. </p>
+                <p>Different parts making up the system. The project was made a lot harder due to the Covid-19 restrictions, but I managed to make it work with what I had at home. </p>
             </div>
             <div class="mibreit-imageElement" style="opacity:0">
                 <img src="/images/mibreitGallery/image-placeholder-transparent.png" 
-                    data-src="/images/projects/wildfireRush/cinemachine.png" 
+                    data-src="/images/projects/partyLeds/diagram.png" 
                     data-title="Image 3" 
                     alt="Image 3" />
-                <p>I used Cinemachine to capture all the shots you can see in the trailer of this game. </p>
+                <p>A diagram showing the different parts of the system. Did I mention I am a master of MS Paint?</p>
             </div>
             <script src="/initializeGallery.js"></script>
             </div>
