Add more projects

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,8 @@
                 <li><a href="/projects/wildfireRush.html">🔥 Wildfire Rush - Action/Puzzle Game (2021)</a></li>
                 <li><a href="/projects/gameNavigationalAids.html">🐝 Game Navigational Aids Research - Adventure Game (2020)</a></li>
                 <li><a href="/projects/partyLeds.html">🥳 Party LEDs - Arduino project (2020)</a></li>
+                <li><a href="/projects/pokerApp.html">♠️ Poker assistance app - Image Processing project (2019)</a></li>
+                <li><a href="/projects/languageGame.html">🇩🇰 Language Learning and Narrative Research - Android story based game (2019)</a></li>
             </ul> 
           </div>
       </div>
