Add more projects

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,9 @@
                 <li><a href="/projects/partyLeds.html">🥳 Party LEDs - Arduino project (2020)</a></li>
                 <li><a href="/projects/pokerApp.html">♠️ Poker assistance app - Image Processing project (2019)</a></li>
                 <li><a href="/projects/languageGame.html">🇩🇰 Language Learning and Narrative Research - Android story based game (2019)</a></li>
+                <li><a href="/projects/eggMission.html">🥚 EggMission - 2D Unity Arcade Driving game (2017)</a></li>
+                <li><a href="/projects/sorex.html">♟️ Sorex - C++ .NET Chess game (2016)</a></li>
+
             </ul> 
           </div>
       </div>
