Adjust LinkedIn link

--- a/navigation.html
+++ b/navigation.html
@@ -14,7 +14,7 @@
               <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="/images/cv/GitHub-Mark-64px.png" width=32" height="32"></a>
             </li>
             <li class="navigation-item">
-              <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis-b21a24161/"><img alt="LinkedIn" src="/images/cv/LI-In-Bug.png" width=35" height="32"></a>
+              <a class="logo-linkedin" href="https://www.linkedin.com/in/simonas-%C4%8Deponis/"><img alt="LinkedIn" src="/images/cv/LI-In-Bug.png" width=35" height="32"></a>
             </li>
           </ul>
       </div>
