--- a/projects/gameNavigationalAids.html
+++ b/projects/gameNavigationalAids.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href= "https://youtu.be/sUE7P1hAuo0" target="_blank">Video Presentation</a></li>
                 <li><a href= "https://github.com/latedude2/P5Game" target="_blank">Github Repository</a></li>
-                <li<a href= "https://github.com/latedude2/P5-data-analysis" target="_blank">Github Data Analysis Repository</a></li>
+                <li><a href= "https://github.com/latedude2/P5-data-analysis" target="_blank">Github Data Analysis Repository</a></li>
             </ul> 
 
               <div class="image-gallery">
