Add DDA project

--- a/projects/languageGame.html
+++ b/projects/languageGame.html
@@ -21,7 +21,7 @@
       <div class="row">
           <div class="column">
             <h2>Language Learning Narrative Research</h2>
-            <p>A university project developed by me and 6 other students during at Aalborg university.
+            <p>A university project developed by me and 6 other students at Aalborg university.
             For this project, I acted as lead programmer. 
             We developed an app which taught Danish in collaboration with a Danish language school IA Sprog. 
             A lot of user testing was done to made sure the difficulty of the game matched the target group.  
