--- a/projects/pokerApp.html
+++ b/projects/pokerApp.html
@@ -21,7 +21,7 @@
       <div class="row">
           <div class="column">
             <h2>Poker App</h2>
-            <p>A university project developed by me and 5 other students during at Aalborg university.
+            <p>A university project developed by me and 5 other students at Aalborg university.
             For this project, I acted as the team lead and programmer. 
             We developed an app which connected to a Python server which analysed images taken by a camera. 
             The app then told the players what poker hand they have and how strong it is. 
