--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
           <div class="column">
             <h2>Projects I worked on</h2>
             <ul>
+                <li><a href="/projects/dynamicDifficultyAdjustment.html">🎨 Ink Busters - Multiplayer FPS Game (2021)</a></li>
                 <li><a href="/projects/wildfireRush.html">🔥 Wildfire Rush - Action/Puzzle Game (2021)</a></li>
                 <li><a href="/projects/gameNavigationalAids.html">🐝 Game Navigational Aids Research - Adventure Game (2020)</a></li>
                 <li><a href="/projects/partyLeds.html">🥳 Party LEDs - Arduino project (2020)</a></li>
