--- a/projects/sail.html
+++ b/projects/sail.html
@@ -21,7 +21,7 @@
       <div class="row">
           <div class="column">
             <h2>Resource Management game made during Inclusivity Game Jam 2021</h2>
-            <p>Developed in 48 hours together with 4 of my friends. 
+            <p>Developed in 48 hours together with 4 of my friends. We managed to win <b>first</b> place out of 19 entries!
             For this project, I acted as lead programmer. 
         </p>
             <p><b>Technologies used: </b>Unity, C#, Backtrace.</p>
