--- a/projects/dynamicDifficultyAdjustment.html
+++ b/projects/dynamicDifficultyAdjustment.html
@@ -25,7 +25,7 @@
             For this project, I acted as the team lead and programmer. 
             We developed a Unity game which features multiplayer implemented using Photon Unity Networking, first-person shooter gameplay and data collection.
         </p>
-            <p><b>Technologies used: </b>Unity, C#, HTML, CSS, JS, NodeJS, MongoDB, Python Jupyter Notebooks, Pandas and various others.</p>
+            <p><b>Technologies used: </b>Unity, C#, HTML, CSS, JS, NodeJS, MongoDB, Python, Jupyter Notebooks, Pandas and various others.</p>
             <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/zqJQNXSjj0w" target="_blank">Video Presentation</a></li>
