--- a/projects/eggMission.html
+++ b/projects/eggMission.html
@@ -23,6 +23,7 @@
             <h2>EggMission</h2>
               <p>Global Game Jam Kaunas 2018 submission. 
                   Together with 3 of my friends, we created a small arcade driving game themed around the Easter holiday. </p>
+              <p><b>Technologies used: </b>Unity, C#, Sony Vegas Pro.</p>
               <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/Ydccn3c_Tyo" target="_blank">Trailer</a></li>
