--- a/projects/wildfireRush.html
+++ b/projects/wildfireRush.html
@@ -26,7 +26,7 @@
             We won the most engaging game title out of 19 groups of students that made games the same semester at AAU! 
             The levels were loaded during runtime from a website I setup which hosted the level files. 
             This was done to easier edit the levels when using the WebGL build.</p>
-            <p><b>Technologies used: </b>C#, Unity, Javascript.</p>
+            <p><b>Technologies used: </b>C#, Unity, JavaScript.</p>
             <b>Links: </b> 
             <ul>
                 <li><a href= "https://www.youtube.com/watch?v=xE3GL39ctm0" target="_blank">Video Trailer</a></li>
