--- a/projects/pokerApp.html
+++ b/projects/pokerApp.html
@@ -30,6 +30,7 @@
             <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/6csXeE_AygI" target="_blank">Video Presentation</a></li>
+                <li><a href= "https://drive.google.com/file/d/1cgRSR6P4NZ4Z5T9RkQYVN940bpkBG10v/view?usp=sharing" target="_blank">Project report</a></li>
                 <li><a href= "https://github.com/latedude2/P3_image_processing/tree/master/openCV_version/venv/Scripts/finalCode" target="_blank">Github Repository - Python code</a></li>
                 <li><a href= "https://github.com/latedude2/P3_image_processing/tree/master/android_application/android_application_for_P3/app/src/main" target="_blank">Github Repository - Android code</a></li>
             </ul> 
