--- a/projects/dynamicDifficultyAdjustment.html
+++ b/projects/dynamicDifficultyAdjustment.html
@@ -29,6 +29,7 @@
             <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/zqJQNXSjj0w" target="_blank">Video Presentation</a></li>
+                <li><a href= "https://drive.google.com/file/d/1zqBzviiXzW4FyKH7F8f7AcioDOSUmers/view?usp=sharing" target="_blank">Project report</a></li>
                 <li><a href= "https://github.com/Group-609/BachelorProject" target="_blank">Github Repository - Unity code</a></li>
                 <li><a href= "https://github.com/Group-609/Group-609.github.io" target="_blank">Github Repository - Website for doing the Final testing</a></li>
             </ul> 
