--- a/projects/gameNavigationalAids.html
+++ b/projects/gameNavigationalAids.html
@@ -28,6 +28,7 @@
               <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/sUE7P1hAuo0" target="_blank">Video Presentation</a></li>
+                <li><a href= "https://drive.google.com/file/d/1n3AWneE3DT1lbTaTAy3jnkCln31qMcW0/view?usp=sharing" target="_blank">Project report</a></li>
                 <li><a href= "https://github.com/latedude2/P5Game" target="_blank">Github Repository</a></li>
                 <li><a href= "https://github.com/latedude2/P5-data-analysis" target="_blank">Github Data Analysis Repository</a></li>
             </ul> 
