--- a/projects/partyLeds.html
+++ b/projects/partyLeds.html
@@ -30,6 +30,7 @@
             <b>Links: </b> 
             <ul>
                 <li><a href= "https://youtu.be/aEGAtyXTmqY" target="_blank">Video showcase</a></li>
+                <li><a href= "https://drive.google.com/file/d/1wQix9r45pze2XRYK6jP754oq9qRLY9i8/view?usp=sharing" target="_blank">Project report</a></li>
                 <li><a href= "https://github.com/latedude2/PartyLeds" target="_blank">Github Repository</a></li>
             </ul> 
             <div class="image-gallery">
